<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epay app payment </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="BtnPaymentText">Test payment</string>
    <string name="ImageDescription">Epay logo</string>
    <string name="LabelText">App Payment Example</string>
    <string name="LabelWarning">WARNING - This is a demo</string>
    <string name="title_activity_create_payment">Create test payment</string>
    <string name="SpinnerTextPromptCurrency">Select currency</string>
    <string name="SpinnerTextPromptLanguage">Select language</string>
    <string name="SpinnerTextPromptPaymentCollection">Select Paymentcollection</string>
    <string name="SpinnerTextPromptLockCollection">Select Lockcollection</string>
    <string name="BtnShowPaymentWindow">Create dummy payment</string>
    <string name="BtnGoToPayment">Go to payment</string>
    <string name="TestPaymentLabel">Select your test values below</string>

</resources>
