<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ImageDescription"
        android:src="@drawable/epaylogo" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button1"
        android:onClick="ShowPaymentWindow"
        android:text="@string/BtnShowPaymentWindow"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/LabelText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/LabelWarning"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="49dp"
        android:onClick="TestPayment"
        android:text="@string/BtnPaymentText"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>